macro (add_test_exec exec_name)
	add_executable("${exec_name}" "${exec_name}.cc")
	target_include_directories("${exec_name}" PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
	target_link_libraries("${exec_name}" omegalib)
endmacro (add_test_exec)

add_test_exec(test)
add_test_exec(getip_test)
add_test_exec(syntest)
add_test_exec(ping_test)
add_test_exec(slice_test)
add_test_exec(tcp_test)
add_test_exec(udp_test)
add_test_exec(parse_test)
